# cointanalysis

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  stat.py  test.sh
.github/workflows/: bump.yml  ci.yml  publish.yml
cointanalysis/: __init__.py  _aeg_pca.py  _stat.py  _utils.py  coint.py  ou.py  stat.py
examples/howto/: howto.ipynb  howto.py
sample/: howto.py
tests/: examples.sh  pytest.sh  sample.sh  test_coint.py  test_errors.py  test_params.py  test_stat.py  test_utils.py
