[tool.poetry]
name = "cointanalysis"
version = "0.3.1"
description = "Python package for cointegration analysis."
authors = ["Shota Imaki <shota.imaki@icloud.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.19.0"
statsmodels = "^0.12.0"
scikit-learn = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
pytest-cov = "^2.10.0"
codecov = "^2.1.0"
flake8 = "^3.8.0"
pandas = "^1.1.0"
pandas-datareader = "^0.9.0"
matplotlib = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
