[tool.poetry]
name = "cointanalysis"
version = "0.3.3"
description = "Python package for cointegration analysis."
authors = ["Shota Imaki <shota.imaki.0801@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6.13"
numpy = "^1.19.0"
statsmodels = "^0.12.0"
scikit-learn = ">=0.23,<0.25"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
pytest-cov = "^2.10.0"
codecov = "^2.1.0"
pandas = "^1.1.0"
pandas-datareader = "^0.9.0"
matplotlib = "^3.3.0"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = 'black'
force_single_line = true
